--- a/ex-2/package.json
+++ b/ex-2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project",
+  "name": "project-stub",
   "version": "1.0.0",
   "main": "gulpfile.js",
   "scripts": {
@@ -12,8 +12,11 @@
   "author": "Alexandra Sitovich",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.16.0",
     "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.0",
+    "@babel/runtime-corejs3": "^7.16.3",
     "browser-sync": "^2.27.7",
     "chalk": "^4.1.2",
     "gulp": "^4.0.2",
@@ -41,6 +44,5 @@
     "require-dir": "^1.2.0",
     "sass": "^1.43.4",
     "vinyl-ftp": "^0.6.1"
-  },
-  "dependencies": {}
+  }
 }
